@@ -11,7 +11,7 @@ $configuration = array();
  */
 $configuration['application'] = array(
     'name' => 'PrestashopConsole',
-    'version' => '0.2.1',
+    'version' => '0.2.2',
     'author' => 'hhennes <contact@h-hennes.fr>',
     'contributors' => array(
         'okom3pom',
@@ -30,7 +30,9 @@ $configuration['commands'] = array(
      'Hhennes\PrestashopConsole\Command\Module\InstallCommand',
      'Hhennes\PrestashopConsole\Command\Module\UninstallCommand',
      'Hhennes\PrestashopConsole\Command\Module\ResetCommand',
-     'Hhennes\PrestashopConsole\Command\Cache\ClearCommand',
+     'Hhennes\PrestashopConsole\Command\Cache\CleanCommand',
+     'Hhennes\PrestashopConsole\Command\Cache\FlushCommand',
+     'Hhennes\PrestashopConsole\Command\Cache\ClearMediaCommand',
      'Hhennes\PrestashopConsole\Command\Cache\Smarty\ClearCommand',
      'Hhennes\PrestashopConsole\Command\Cache\Smarty\ConfigureCommand',
      'Hhennes\PrestashopConsole\Command\Configuration\GetCommand',
