@@ -1,0 +1,33 @@
+<?php
+
+namespace Hhennes\PrestashopConsole\Command\Cache;
+
+use Symfony\Component\Console\Command\Command;
+use Symfony\Component\Console\Input\InputArgument;
+use Symfony\Component\Console\Input\InputInterface;
+use Symfony\Component\Console\Input\InputOption;
+use Symfony\Component\Console\Output\OutputInterface;
+
+/**
+ * Clear media cache
+ *
+ * @author hhennes <contact@h-hennes.fr>
+ *
+ */
+class ClearMediaCommand extends Command
+{
+
+    protected function configure()
+    {
+        $this
+                ->setName('cache:media:clear')
+                ->setDescription('Clear media cache');
+    }
+
+    protected function execute(InputInterface $input, OutputInterface $output)
+    {
+        \Media::clearCache();
+        $output->writeln('<info>Media cache cleared</info>');
+    }
+
+}
